--- a/VolkovCalc/VolkovCalc/VolkovCalc.csproj
+++ b/VolkovCalc/VolkovCalc/VolkovCalc.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Add.cs" />
     <Compile Include="Divided.cs" />
+    <Compile Include="Factory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
