--- a/VolkovCalc/VolkovCalc.Tests/VolkovCalc.Tests.csproj
+++ b/VolkovCalc/VolkovCalc.Tests/VolkovCalc.Tests.csproj
@@ -43,10 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OneArgument\LnTests.cs" />
+    <Compile Include="OneArgument\SingleFactoryTests.cs" />
+    <Compile Include="OneArgument\SinTests.cs" />
+    <Compile Include="OneArgument\SqrTests.cs" />
     <Compile Include="TwoArgument\AddTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OneArgument\SqrtTests.cs" />
     <Compile Include="TwoArgument\DividedTests.cs" />
+    <Compile Include="TwoArgument\FactoryTests.cs" />
     <Compile Include="TwoArgument\MinusTests.cs" />
     <Compile Include="TwoArgument\MultiplyTests.cs" />
   </ItemGroup>
